[package]
name = "nannou_sketches"
version = "0.1.0"
authors = ["Seth Boyles <sethboyles@gmail.com>"]
description = "nannou sketches"
readme = "README.md"
keywords = ["creative", "sketch", "graphics", "audio"]
license = "MIT"
repository = "https://github.com/sethboyles/nannou_sketches.git"
homepage = "https://github.com/sethboyles/nannour_sketches"
edition = "2018"

[dependencies]
nannou = "0.11"

[dev-dependencies]


# --------------- Nannou Examples
[[example]] 
name = "wave_clock" 
path = "wave_clock.rs"
[[example]] 
name = "circle_lines" 
path = "circle_lines.rs"
[[example]] 
name = "circle_lines_large" 
path = "circle_lines_large.rs"
[[example]] 
name = "perlin_grid" 
path = "perlin_grid.rs"
[[example]] 
name = "sphere" 
path = "sphere.rs"
[[example]] 
name = "basic_shapes" 
path = "tutorials/basic_shapes.rs"
[[example]] 
name = "wandering_circles" 
path = "wandering_circles.rs"
[[example]] 
name = "mountains" 
path = "mountains.rs"
[[example]] 
name = "shaded_mountains" 
path = "shaded_mountains.rs"


[[example]] 
name = "layered_mountains"
path = "layered_mountains.rs"
[[example]] 
name = "joy_division"
path = "joy_division.rs"

